--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="logo">
         <div>
-            <img src="../img/SEM FUNDO.png" alt="" height="150px" width="150px" title="Tata Decor">
+            <img src="img/SEM FUNDO.png" alt="" height="150px" width="150px" title="Tata Decor">
         </div>
     </div>
 
@@ -21,7 +21,7 @@
     
 
     <a href="inicial.html">
-        <img class="inicio" src="../img/casa.png" alt="" height="50px">
+        <img class="inicio" src="img/casa.png" alt="" height="50px">
     </a>
 
 </header>
@@ -29,7 +29,7 @@
 <nav>
 
     <div class="banner">
-        <img src="../img/banner.png" alt="" height="392px">
+        <img src="img/banner.png" alt="" height="392px">
     </div>
 
     <div class="f1">
@@ -37,14 +37,14 @@
     </div>
 
     <div class="f2">
-        <img src="../img/sonho.png" alt="" height="100px">
+        <img src="img/sonho.png" alt="" height="100px">
     </div>
 </nav>
 
 <main>
     <div class="produtos">
         <div class="prod">
-            <img src="../img/Arranjo de Orquídea - G Ônix.jpg" alt="" class="prod">
+            <img src="img/Arranjo de Orquídea - G Ônix.jpg" alt="" class="prod">
         </div>
 
 <div class="tdescricao">
@@ -70,7 +70,7 @@
     <div class="produtosl2">
 
         <div class="prod">
-            <img src="../img/Arranjo de Orquídea + Protea.jpg" alt="" class="prod">
+            <img src="img/Arranjo de Orquídea + Protea.jpg" alt="" class="prod">
         </div>
 
 <div class="tdescricao">
@@ -90,7 +90,7 @@
     <div class="produtosl3">
 
         <div class="prod">
-            <img src="../img/Arranjo de orquídea - Vaso Wood.jpg" alt="" class="prod">
+            <img src="img/Arranjo de orquídea - Vaso Wood.jpg" alt="" class="prod">
         </div>
 
 <div class="tdescricao">
@@ -112,7 +112,7 @@
 <div class="produtosl4">
 
     <div class="prod">
-        <img src="../img/Arranjo de orquídea branca.jpg" alt="" class="prod">
+        <img src="img/Arranjo de orquídea branca.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
@@ -134,7 +134,7 @@
 <div class="produtosl5">
 
     <div class="prod">
-        <img src="../img/Arranjo de orquídea branca 3D.jpg" alt="" class="prod">
+        <img src="img/Arranjo de orquídea branca 3D.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
@@ -156,7 +156,7 @@
 <div class="produtosl6">
 
     <div class="prod">
-        <img src="../img/Arranjo de orquídea com suculentas.jpg" alt="" class="prod">
+        <img src="img/Arranjo de orquídea com suculentas.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
@@ -176,7 +176,7 @@
 <div class="produtosl7">
 
     <div class="prod">
-        <img src="../img/Arranjo de Orquídea Ikebana G.jpg" alt="" class="prod">
+        <img src="img/Arranjo de Orquídea Ikebana G.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
@@ -198,7 +198,7 @@
 <div class="produtosl8">
 
     <div class="prod">
-        <img src="../img/Arranjo de orquídea vaso G Dourado.jpg" alt="" class="prod">
+        <img src="img/Arranjo de orquídea vaso G Dourado.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
@@ -220,7 +220,7 @@
 <div class="produtosl9">
 
     <div class="prod">
-        <img src="../img/Arranjo de orquídea azul.jpg" alt="" class="prod">
+        <img src="img/Arranjo de orquídea azul.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
@@ -242,7 +242,7 @@
 <div class="produtosl10">
 
     <div class="prod">
-        <img src="../img/Arranjo de orquídea rosa c2 hastes.jpg" alt="" class="prod">
+        <img src="img/Arranjo de orquídea rosa c2 hastes.jpg" alt="" class="prod">
     </div>
 
 <div class="tdescricao">
