--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="f2">
-        <img src="img/sonho.png" alt="" height="100px">
+        <img class="sonhoimg" src="img/sonho.png" alt="" height="100px">
     </div>
 </nav>
 
