--- a/produto1.html
+++ b/produto1.html
@@ -10,7 +10,7 @@
     <header>
 
 
-    <a href="inicial.html">
+    <a href="index.html">
     <img class="voltar" src="img/casa.png" alt="" height="50px">
     </a>
     </header>
@@ -34,7 +34,7 @@
 
             <div class="pagto">
 
-            <div><img src="img/pagto.png" alt="" height="40px"></div>
+            <div class="metodpg"><img src="img/pagto.png" alt="" height="40px"></div>
             
             <p class="pagtoo">Em até 6x no cartão!</p>    
 
