--- a/produto1.html
+++ b/produto1.html
@@ -72,6 +72,29 @@
             </div>
         </div>
 
+        <div class="frete">
+
+            <div class="estados">
+
+                <div class="freti">
+                    <p class="freet">Fretes</p>
+                    <img class="carrofrete" src="img/carro.png" alt="" height="80px">
+                </div>
+
+                <p class="precofrete">R$ 39,00</p>
+                <p class="sul">RS, SC, PR</p>
+                <p class="nordeste">MA, PI, BA, PE, SE, AL, PB, RN, CE</p>
+                <p class="centro">MT, MS, GO</p> 
+                <p class="precofrete">R$ 19,00</p>
+                <p class="sudeste">SP, MG, ES, RJ</p>
+                <p class="precofrete">R$ 24,00</p>
+                <p class="interior">SP (interior)</p>
+                <p class="precofrete">R$ 49,00</p>
+                <p class="norte">AC, AM, RR, AP, PA, RO</p>
+            </div>
+
+        </div>
+
         </div>
     </div>
     </main>
